--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,8 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <div id="content"></div>
 </body>
-<script src="/static/bundle.js"></script>
+<script src="bundle.js"></script>
 
